/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.v1;

option java_package = "io.atomix.api.runtime.v1";
option java_outer_classname = "RuntimeV1";
option java_multiple_files = true;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

service Runtime {
    rpc Program (ProgramRequest) returns (ProgramResponse);
    rpc Connect (ConnectRequest) returns (ConnectResponse);
    rpc Configure (ConfigureRequest) returns (ConfigureResponse);
    rpc Disconnect (DisconnectRequest) returns (DisconnectResponse);
}

message RoutingRule {
    PrimitiveType type = 1 [
        (gogoproto.nullable) = false
    ];
    repeated string names = 2;
    repeated string tags = 3;
    google.protobuf.Any config = 4;
}

message DriverID {
    option (gogoproto.equal) = true;
    string name = 1;
    string api_version = 2 [
        (gogoproto.customname) = "APIVersion"
    ];
}

message StoreID {
    option (gogoproto.equal) = true;
    string namespace = 1;
    string name = 2;
}

message Route {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    repeated RoutingRule rules = 2 [
        (gogoproto.nullable) = false
    ];
}

message PrimitiveID {
    option (gogoproto.equal) = true;
    string name = 1;
}

message PrimitiveType {
    option (gogoproto.equal) = true;
    string name = 1;
    string api_version = 2 [
        (gogoproto.customname) = "APIVersion"
    ];
}

message PrimitiveMeta {
    option (gogoproto.equal) = true;
    PrimitiveType type = 1 [
        (gogoproto.nullable) = false
    ];
    PrimitiveID id = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    repeated string tags = 3;
}

message ProgramRequest {
    repeated Route routes = 1 [
        (gogoproto.nullable) = false
    ];
}

message ProgramResponse {

}

message ConnectRequest {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    DriverID driver_id = 2 [
        (gogoproto.customname) = "DriverID",
        (gogoproto.nullable) = false
    ];
    google.protobuf.Any config = 3;
}

message ConnectResponse {

}

message ConfigureRequest {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    google.protobuf.Any config = 2;
}

message ConfigureResponse {

}

message DisconnectRequest {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
}

message DisconnectResponse {

}
